# fwi-ls

./: README.md  environment.yml  tasks.py
src/: .gitignore
src/cpp/: CMakeLists.txt  _fwi_ls.cpp  complex_linear_system.cpp  complex_linear_system.h  forward_solver.cpp  forward_solver.h  inversion_solver.cpp  inversion_solver.h  mesh_generator.cpp  mesh_generator.h
src/python/_sandbox/: complex_solve_experiment.py  fd_2d_hellmholtz.py  fd_2d_time_domain.py  ricker_wave_pulse_time_vs_freq_domain.py
src/python/frequency_domain/: adjoint_solver.py  callbacks.py  complex_linear_system.py  experimental_data.py  fem_common.py  forward_case.py  forward_solver.py  function_builders.py  initial_guess.py  inversion_case.py  inversion_solver.py  mesh.py  mesh_generator.py  paraview_utils.py  plotting.py  profiling_tools.py  receiver.py  ricker_pulse.py  source.py  timing_observer.py
src/python/frequency_domain/experiments/: heavyside_experiment.py  ricker_pulse_examples.py
src/python/frequency_domain/experiments/forward_cases/: case_a.py  case_b.py  fwd_validation.py  symmetric_case.py
src/python/frequency_domain/experiments/inversion_cases/: case_a_fwi.py  case_b_fwi.py  symmetric_case_fwi.py
src/python/frequency_domain/tools/: forward_case_runner.py  fwi_case_runner.py  generate_fwi_problem.py
